Wed Mar 10 12:07:06 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/odbc/unittests/transaction.c check results for errors

Wed Mar 10 14:07:10 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix for SQLEndTran/SQLTransact if errors

Mon Mar 08 20:20:15 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_tds2sql.c: fix buffer overflow

Mon Mar 08 19:46:40 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/data.c: Sybase compatibility

Mon Mar 08 13:42:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_tds2sql.c src/odbc/unittests/genparams.c:
	- fixed conversions from server to binary type

Mon Mar 08 11:38:00 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fixed row counts problem in prepared
	* src/odbc/unittests/moreandcount.c:
	- updated to reflect FreeTDS status
	* src/odbc/unittests/t0003.c:
	- reuse macro

Sat Mar 06 15:00:18 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- fix invalid cursor state on SQLRowCount

Sat Mar 06 14:11:26 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: removed old TODO
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/transaction.c:
	- improve test to test SQLRowCount

Sat Mar 06 12:05:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- fixed link problem on some platform

Fri Feb 27 20:06:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/Makefile.am src/dblib/Makefile.am:
	- filter exports

Wed Feb 25 08:20:12 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c:
	- fixed buffer reading overflow (thanks to Matthew Davis)

Tue Feb 24 10:13:37 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: added comment

Mon Feb 23 17:18:05 CET 2004    Frediano Ziglio <freddy77@angelfire.com>