@@ -2,12 +2,13 @@
 
 /* Test for data format returned from SQLPrepare */
 
-static char software_version[] = "$Id: prepare_results.c,v 1.1 2004/02/09 13:04:05 freddy77 Exp $";
+static char software_version[] = "$Id: prepare_results.c,v 1.2 2004/03/11 10:29:08 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 int
 main(int argc, char *argv[])
 {
+#ifdef ENABLE_DEVELOPING
 	SQLSMALLINT count, namelen, type, digits, nullable;
 	SQLUINTEGER size;
 	char name[128];
@@ -68,5 +69,6 @@ main(int argc, char *argv[])
 	Disconnect();
 
 	printf("Done.\n");
+#endif
 	return 0;
 }
